--- a/siw-spring-security/src/main/resources/templates/insegnanteForm.html
+++ b/siw-spring-security/src/main/resources/templates/insegnanteForm.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/baseadmin.html :: headerfiles(title=#{header.insegnanti})"> </head>
+<head th:replace="fragments/base.html :: headerfiles(title=#{header.insegnanti})"> </head>
 <body>
 	<header th:replace="fragments/base.html :: intestazione"></header>
 	<div class="container">
@@ -24,9 +24,9 @@
 				<span th:if="${#fields.hasErrors('cognome')}" th:errors="*{cognome}"></span>
 			</div>
 			<div>
-				<span>Descrizione:</span>
-				<span><input type="text" th:field="*{descrizione}" /></span>
-				<span th:if="${#fields.hasErrors('descrizione')}" th:errors="*{descrizione}"></span>
+				<span>Email:</span>
+				<span><input type="text" th:field="*{email}" /></span>
+				<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
 			</div>
 			<div>
 				<span><button type="submit">Invio</button></span>
@@ -35,6 +35,5 @@
 	</form>
 	</div>
 	</div>
-	<footer th:replace="fragments/base.html :: fondo"></footer>
 </body>
 </html>
