--- a/siw-spring-security/src/main/resources/templates/fragments/baseadmin.html
+++ b/siw-spring-security/src/main/resources/templates/fragments/baseadmin.html
@@ -10,7 +10,7 @@
 		<h1>Siw - Spring Very Simple Demo</h1>
 	</header>
 	<navbar>
-			<img class="logo" src="images/logomnc.png">
+			<!-- <img class="logo" src="images/logomnc.png"> -->
 			<ul>
 				<li><a href="corso" th:href="@{/corso}">Corsi</a></li>
 				<li><a href="insegnanti" th:href="@{/insegnante}">Contatti</a></li>
