--- a/siw-spring-security/src/main/resources/templates/lezioneForm.html
+++ b/siw-spring-security/src/main/resources/templates/lezioneForm.html
@@ -46,7 +46,7 @@
 					</div>
 					<div>
 						<span>Insegnante: </span> 
-						<select id="insegnante" th:field="*{corso.insegnanti}" required>
+						<select id="insegnante" th:field="*{insegnante}" required>
 						<option th:each="insegnante : ${insegnanti}"
 						th:value="${insegnante.id}" th:text="${insegnante.nome} +  ' ' + ${insegnante.cognome}"></option>
 						</select>
